--- a/RESTServiceDEMO/RESTServiceDEMO.WEB/Views/Home/Index.cshtml
+++ b/RESTServiceDEMO/RESTServiceDEMO.WEB/Views/Home/Index.cshtml
@@ -17,20 +17,53 @@
 </head>
 <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding: 30px;">
         <div class="row-fluid">
-            <div class="span2">
+            <div class="span2  table table-bordered">
                 <div>
                     <input id="TEST" type="button" value="Get Persons" class="btn-large" />
                 </div>
             </div>
-            <div class="span6" id="result"></div>
+            
             <div class="span4">
-                <button type="button" class="btn-large" value="TEST"></button>
-                <button type="button" class="btn-large" value="TEST"></button>
-                <button type="button" class="btn-large" value="TEST"></button>
-                <button type="button" class="btn-large" value="TEST"></button>
-                <button type="button" class="btn-large" value="TEST"></button>
+                <table class="table table-bordered">
+                          <thead>
+                              <tr>
+                                  <th>#</th>
+                                  <th>First Name</th>
+                                  <th>Last Name</th>
+                                  <th>Username</th>
+                              </tr>
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td>1</td>
+                                  <td>Mark</td>
+                                  <td>Otto</td>
+                                  <td>TEST</td>
+                              </tr>
+                              <tr>
+                                  <td>2</td>
+                                  <td>Jacob</td>
+                                  <td>Thornton</td>
+                                  <td>TEST</td>
+                              </tr>
+                              <tr>
+                                  <td>3</td>
+                                  <td>Larry</td>
+                                  <td>the Bird</td>
+                                  <td>TEST</td>
+                              </tr>
+                          </tbody>
+                      </table>
+            </div>
+            <div class="span4 table table-bordered" id="result">TEST</div>
+            <div class="span2 table table-bordered">
+                <input type="button" class="btn btn-primary" value="TEST"/>
+                <input type="button" class="btn btn-primary" value="TEST"/>
+                <input type="button" class="btn btn-info" value="TEST"/>
+                <input type="button" class="btn btn-primary" value="TEST"/>
+                <input type="button" class="btn btn-danger" value="TEST"/>
 
             </div>
         </div>
@@ -48,8 +81,9 @@
 
             var requestJson = JSON.stringify(request);
 
+            alert("@Url.Content("~")");
             $.ajax({
-                url: '@Url.Content("~")+"RESTService/GetPersons',
+                url: '@Url.Content("~")'+'RESTService/GetPersons',
                 type: "POST",
                 contentType: "application/json",
                 data: requestJson,
