add code to check call rest or soap

--- a/RESTServiceDEMO/RESTServiceDEMO.WEB/Views/Home/Index.cshtml
+++ b/RESTServiceDEMO/RESTServiceDEMO.WEB/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
 
             alert("@Url.Content("~")");
             $.ajax({
-                url: '@Url.Content("~")'+'RESTService/GetPersons',
+                url: '@Url.Content("~")'+'RESTService/GetXX',
                 type: "POST",
                 contentType: "application/json",
                 data: requestJson,
